--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 if(currentIndexTitle < charArrTitle.length){
                     document.querySelector(".title__letter").textContent += charArrTitle[currentIndexTitle];
                     let i = document.createElement("i");
-                    i.className = "fa-solid fa-heart"
+                    i.className = ""
                     document.querySelector(".title__letter").appendChild(i)
                     currentIndexTitle++;
                 }
