--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chúc bạn tui sinh nhật zui zẻ</title>
+    <title>Cmsn Lê Trang nhé!</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
@@ -141,8 +141,8 @@
     </div>
 </body>
 <script>
-    let datetxt = "1/1/2003";
-    let datatxtletter = "Chúc cậu một sinh nhật vui vẻ, ý nghĩa 🎂";
+    let datetxt = "13/06/2003";
+    let datatxtletter = "Chúc bạn tui một sinh nhật vui vẻ, ý nghĩa 🎂, chúc bạn tui sau này thành một cô giáo dạy giỏi nhé :v :v";
     let titleLetter = "Dear ... :)))";
     let charArrDate = datetxt.split('');
     let charArrDateLetter = datatxtletter.split('');
