--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <img src="./images/1.jpg" alt="">
                     </div>
                     <div class="name">
-                        <span>Ví dụ thôi ha :v</span>
+                        <span>Cmsn Lê Trang nhé!</span>
                     </div>
                     <div class="balloon_one">
                         <img width="100px" src="./images/balloon1.png" alt="">
