--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <script>
     let datetxt = "13/06/2003";
     let datatxtletter = "Chúc bạn tui một sinh nhật vui vẻ, ý nghĩa 🎂, chúc bạn tui sau này thành một cô giáo dạy giỏi nhé :v :v";
-    let titleLetter = "Dear ... :)))";
+    let titleLetter = "Gửi tới Lê Trang :)))";
     let charArrDate = datetxt.split('');
     let charArrDateLetter = datatxtletter.split('');
     let charArrTitle = titleLetter.split('');
